URL Rewriting update (.htaccess)  - URLs no longer need a "/" at the end  - Two first parameters(controller and action) must be alphabetical, and the last one alphanumeric  - URLs are rewritten only when containing  1 to 3 parameters (No parameter is Router default behaviour)
Model class is made abstract because it provides services and should not be instantiated.
Minor English grammar correction.

Add DbConnection::__clone() with private scope to neutralise database connection cloning.

--- a/.htaccess
+++ b/.htaccess
@@ -11,10 +11,10 @@
 	# L: Last		>> Last rule to execute when matched > Avoid infinite loops
 	# QSA: Qsappend	>> Also Transfer potential URL parameters (?param=blabla...)
 	
-	RewriteRule	^(.*)/(.*)/(.*)/$	index.php?controller=$1&action=$2&parameters=$3	[L,QSA,NC]
+	RewriteRule	^([a-zA-Z]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)/?$	index.php?controller=$1&action=$2&parameters=$3	[L,QSA,NC]
 
-	RewriteRule	^(.*)/(.*)/$	index.php?controller=$1&action=$2	[L,QSA,NC]
-	
-	RewriteRule	^(.*)/$	index.php?controller=$1	[L,QSA,NC]
+	RewriteRule	^([a-zA-Z]+)/([a-zA-Z]+)/?$	index.php?controller=$1&action=$2	[L,QSA,NC]
+
+	RewriteRule	^([a-zA-Z]+)/?$	index.php?controller=$1	[L,QSA,NC]
 
 </IfModule>
